--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,6 +45,11 @@ html, body{
 .slide:nth-child(2) {
 
 }
+.bannerWrapper {
+    margin-left:20px;
+    display: flex;
+    justify-content: space-around;
+}
 
 .slide:nth-child(3) {
 
